Add send button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dogo life</title>
+    <title>Dogos life</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -33,6 +33,9 @@
                 <p>Receba dicas de brincadeiras, alimentação, passeios e muito mais...</p>
                 <div class="form">
                     <input type="email" name="email" id="ctrl-email" placeholder="Email">
+                </div>
+                <div class="form-send">
+                    <input type="submit" name="submit" id="ctrl-submit" value="Enviar">
                 </div>
             </div>
         </section>
